change menu icon, fix spacing for mobile, text-align left for mobile teaching page

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -4,7 +4,7 @@
   position: relative;
   padding-right: 10rem;
   padding-left: 10rem;
-  margin-top: 150px;
+  margin-top: 120px;
   min-height: 70vh;
   max-width: 100vw;
   width: 100vw;
